# Sabt_Hazine

./: .gitignore  Hazineha.py  README.md  app.py  main.py  pyproject.toml  railway.toml  requirements.txt  t.py  user.json
backend/: server.py
backend/ios_voice/: app.py  railway.toml
controllers/: category_controller.py  sabte_hazine_controller.py
services/: auth_session.py  i18n.py  openai_service.py  parser_service.py  supabase_service.py  utils.py  voice_service.py  voice_service_android.py  voice_service_desktop.py  voice_service_router.py
stripe_backend_railway/: stripe_backend_app.py
ui/: GanttChart_view.py  accounts_view.py  budget_view.py  category_picker_dialog.py  cost_report_view.py  dashboard_view.py  edit_cost_dialog.py  income_view.py  login_view.py  logout.py  main_view.py  member_manager_shared.py  members_view.py  profile_view.py  register_view.py  sabte_hazine_ui.py  subscription_view.py  trend_view.py  workspace_view.py
پیشنهادها/: 6_5_2026.txt
