[project]
name = "sabtehazine"
version = "1.0.0"
description = "Expense tracking app"
requires-python = ">=3.10"

dependencies = [
    "flet>=0.84.0",
    "requests>=2.30.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "openai>=2.0.0",
    "supabase>=2.0.0",
    "spacy",
    "SpeechRecognition",
    "sounddevice"
]