[project]
name = "costio"
version = "1.0.7"
description = "Smart expense tracker with shared workspaces and budgeting."
requires-python = ">=3.10"

dependencies = [
    "flet==0.84.0",
    "flet-charts==0.84.0",
    "tzdata",
    "requests>=2.30.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "openai>=2.0.0",
    "supabase>=2.0.0",
    "gunicorn",
    "flet-stt==0.1.5",
    "sounddevice",
    "soundfile",
    "numpy",
    "google-api-python-client",
    "google-auth",
]

[tool.flet]
org = "com.pps"
product = "Costio"
permissions = ["microphone"]
build_number = 7

[tool.flet.android.permission]
"android.permission.RECORD_AUDIO" = true
"android.permission.MODIFY_AUDIO_SETTINGS" = true
"com.android.vending.BILLING" = true